feat: add owner_id for the project
