# internal/app/server/service/project.go
@@ -7,11 +7,10 @@ import (
 	"github.com/kiaedev/kiae/api/project"
 	"github.com/kiaedev/kiae/internal/app/server/dao"
 	"go.mongodb.org/mongo-driver/bson"
+	"google.golang.org/protobuf/types/known/emptypb"
 )
 
 type ProjectService struct {
-	project.UnimplementedProjectServiceServer
-
 	daoProj *dao.ProjectDao
 }
 
@@ -20,11 +19,15 @@ func NewProjectService(daoProj *dao.ProjectDao) *ProjectService {
 }
 
 func (p *ProjectService) List(ctx context.Context, in *project.ListRequest) (*project.ListResponse, error) {
-	results, total, err := p.daoProj.List(ctx, bson.M{})
+	query := bson.M{"owner_uid": MustGetUserid(ctx)}
+	// todo support GroupMember display
+
+	results, total, err := p.daoProj.List(ctx, query)
 	return &project.ListResponse{Items: results, Total: total}, err
 }
 
 func (p *ProjectService) Create(ctx context.Context, in *project.Project) (*project.Project, error) {
+	in.OwnerUid = MustGetUserid(ctx)
 	return p.daoProj.Create(ctx, in)
 }
 
@@ -34,4 +37,8 @@ func (p *ProjectService) Update(ctx context.Context, in *project.Project) (*proj
 
 func (p *ProjectService) Read(ctx context.Context, in *kiae.IdRequest) (*project.Project, error) {
 	return p.daoProj.Get(ctx, in.Id)
+}
+
+func (p *ProjectService) Delete(ctx context.Context, in *kiae.IdRequest) (*emptypb.Empty, error) {
+	return &emptypb.Empty{}, p.daoProj.Delete(ctx, in.Id)
 }
